--- a/resenas.html
+++ b/resenas.html
@@ -84,6 +84,49 @@
           </div>
         </div>
 
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapsethree">
+              Iron Man (2008)
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+            <div class="accordion-body">
+                <img src="./img/iron_man.jpg" alt="iron_man"> 
+                <div class="body">
+                <h5><strong>Reseña por:</strong> Juan Peréz</h5>
+                <p><b>Iron Man</b> (conocido en <a href="/wiki/Idioma_espa%C3%B1ol" title="Idioma español">español</a> como el <b>Hombre de Hierro</b>) es un <a href="/wiki/Superh%C3%A9roe" title="Superhéroe">superhéroe</a> que aparece en los <a href="/wiki/C%C3%B3mics_estadounidense" class="mw-redirect" title="Cómics estadounidense">cómics estadounidenses</a> publicados por <a href="/wiki/Marvel_Comics" title="Marvel Comics">Marvel Comics</a>. El personaje fue co-creado por el escritor y editor <a href="/wiki/Stan_Lee" title="Stan Lee">Stan Lee</a>, desarrollado por el guionista <a href="/wiki/Larry_Lieber" title="Larry Lieber">Larry Lieber</a> y diseñado por los artistas <a href="https://en.wikipedia.org/wiki/Don_Heck" class="extiw" title="en:Don Heck">Don Heck</a> y <a href="/wiki/Jack_Kirby" title="Jack Kirby">Jack Kirby</a>. Hizo su primera aparición en <i><a href="/wiki/Tales_of_Suspense" title="Tales of Suspense">Tales of Suspense</a></i> #39 (marzo de 1963), y recibió su propio título en <i>Iron Man</i> #1 (mayo de <a href="/wiki/1968" title="1968">1968</a>). 
+                <b><a href="/wiki/Anthony_Edward_Stark" class="mw-redirect" title="Anthony Edward Stark">Anthony Edward Stark</a></b> conocido como <b>Tony Stark</b>, es un multimillonario <a href="/wiki/Magnate" title="Magnate">magnate empresarial</a> estadounidense, <i>playboy</i> e ingenioso <a href="/wiki/Cient%C3%ADfico" title="Científico">científico</a>, quien sufrió una grave lesión en el pecho durante un secuestro en el Medio Oriente. Cuando sus captores intentan forzarlo a construir un <a href="/wiki/Armas_de_destrucci%C3%B3n_masiva" title="Armas de destrucción masiva">arma de destrucción masiva</a> crea, en cambio, una <a href="/wiki/Armadura" class="mw-disambig" title="Armadura">armadura</a> para salvar su vida y escapar del cautiverio. Más tarde, Stark desarrolla su traje, agregando armas y otros dispositivos tecnológicos que diseñó a través de su compañía, <a href="/wiki/Industrias_Stark" title="Industrias Stark">Industrias Stark</a>. Él usa el traje y las versiones sucesivas para proteger al mundo como <b>Iron Man</b>. Aunque al principio ocultó su verdadera identidad, Stark finalmente declaró que era, de hecho, Iron Man en un anuncio público. 
+                </p>
+                </div>
+              </div>
+              <p class="card-text"><small class="text-muted">Last updated 1 hours ago</small></p>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingfour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+              Iron Man 2 (2010)
+            </button>
+          </h2>
+          <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour">
+            <div class="accordion-body">
+                <img src="./img/iron_man2.jpg" alt="iron_man2"> 
+                <div class="body">
+                <h5><strong>Reseña por:</strong> Emiliano Arroyo</h5>
+                <p><i><b>Iron Man 2</b></i> es una <a href="/wiki/Pel%C3%ADcula_de_superh%C3%A9roes" class="mw-redirect" title="Película de superhéroes">película de superhéroes</a> estadounidense de 2010 basada en el <a href="/wiki/Iron_Man" title="Iron Man">personaje homónimo</a> de <a href="/wiki/Marvel_Comics" title="Marvel Comics">Marvel Comics</a>, producida por <a href="/wiki/Marvel_Studios" title="Marvel Studios">Marvel Studios</a> y distribuida por <a href="/wiki/Paramount_Pictures" title="Paramount Pictures">Paramount Pictures</a>.<sup id="cite_ref-rights_1-1" class="reference separada"><a href="#cite_note-rights-1"><span class="corchete-llamada">[</span>a<span class="corchete-llamada">]</span></a></sup>&ZeroWidthSpace; Es la tercera entrega del <a href="/wiki/Universo_cinematogr%C3%A1fico_de_Marvel" title="Universo cinematográfico de Marvel">universo cinematográfico de Marvel</a>. La cinta fue dirigida por <a href="/wiki/Jon_Favreau" title="Jon Favreau">Jon Favreau</a>, con un guion de <a href="/wiki/Justin_Theroux" title="Justin Theroux">Justin Theroux</a>. Es protagonizada por <a href="/wiki/Robert_Downey_Jr." title="Robert Downey Jr.">Robert Downey Jr.</a>, <a href="/wiki/Gwyneth_Paltrow" title="Gwyneth Paltrow">Gwyneth Paltrow</a>, <a href="/wiki/Don_Cheadle" title="Don Cheadle">Don Cheadle</a>, <a href="/wiki/Scarlett_Johansson" title="Scarlett Johansson">Scarlett Johansson</a>, <a href="/wiki/Sam_Rockwell" title="Sam Rockwell">Sam Rockwell</a>, <a href="/wiki/Paul_Bettany" title="Paul Bettany">Paul Bettany</a>, <a href="/wiki/Mickey_Rourke" title="Mickey Rourke">Mickey Rourke</a> y <a href="/wiki/Samuel_L._Jackson" title="Samuel L. Jackson">Samuel L. Jackson</a>. Seis meses después de los eventos de <i>Iron Man</i>, Tony Stark se resiste a los llamados del gobierno de los Estados Unidos para entregar la tecnología de Iron Man, al mismo tiempo que combate su salud deteriorada debido al <a href="/wiki/Reactor_arc" class="mw-redirect" title="Reactor arc">reactor arc</a> en su pecho. Mientras tanto, el malvado científico ruso <a href="/wiki/L%C3%A1tigo_Negro" title="Látigo Negro">Ivan Vanko</a> ha desarrollado la misma tecnología y construido armas propias para vengarse de la familia Stark, uniendo fuerzas con el empresario rival de Stark, <a href="/wiki/Justin_Hammer" title="Justin Hammer">Justin Hammer</a>, en el proceso.
+                </p>
+                </div>
+              </div>
+              <p class="card-text"><small class="text-muted">Last updated 1 hours ago</small></p>
+          </div>
+        </div>
+
+
+
+
+
       </div>
     </section>
 
