--- a/seriesypeliculas.html
+++ b/seriesypeliculas.html
@@ -86,6 +86,28 @@
               <p class="card-text"><small class="text-muted">    Last updated 1 hours ago</small></p>
           </div>
         </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Iron Man (2008)
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+            <div class="accordion-body">
+                <img src="./img/iron_man.jpg" alt="iron_man"> 
+                <div class="body">
+                <ul>
+                  <li><strong>Fecha de estreno:</strong> 14 de abril de 2008 (Argentina)</li>
+                  <li><strong>Director:</strong> Jon Favreau</li>
+                  <li><strong>Recaudación:</strong> 585.2 millones USD</li>
+                  <li><strong>Guion:</strong>Mark Fergus, Hawk Ostby, Arthur Marcum, Matthew Hollaway</li>
+                </ul>
+                <p>Iron Man es la historia del industrial multimillonario y genio inventor Tony Stark (ROBERT DOWNEY JR.). Como consejero delegado de Industrias Stark, el mayor contratista de armamento del Gobierno norteamericano, Tony se ha hecho célebre por proteger durante décadas los intereses norteamericanos en todo el mundo. El estilo de vida despreocupado de Tony cambia de manera radical cuando su convoy sufre un ataque, tras una prueba de armamento que supervisa personalmente, y se ve convertido en prisionero de un grupo de insurgentes. Herido por un fragmento de metralla, que se aloja cerca de su corazón ya debilitado y pone en peligro su vida, Tony se ve forzado a crear un arma devastadora para Raza (FARAN TAHIR), el misterioso cabecilla de los insurgentes. Tony ignora las exigencias de sus captores y utiliza su intelecto y su ingenio para crear una armadura que lo mantenga con vida y le permita escapar de su cautiverio.</p>
+              </div>
+            </div>
+              <p class="card-text"><small class="text-muted">    Last updated 1 hours ago</small></p>
+          </div>
+        </div>
       </div>
     </section>
 
