--- a/actores.html
+++ b/actores.html
@@ -139,6 +139,56 @@
                 <p class="card-text"><small class="text-muted">Last updated 1 hours ago</small></p>
             </div>
           </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingsix">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
+                Robert downey Jr.
+              </button>
+            </h2>
+            <div id="collapsesix" class="accordion-collapse collapse" aria-labelledby="headingsix">
+              <div class="accordion-body">
+                  <img src="./img/robert_downey_jr.jfif" alt="robert_downey_jr"> 
+                  <div class="body">
+                  <h5><strong>Actor:</strong>Robert downey Jr.</h5>
+                  <p>
+                    Robert John Downey Jr. (Nueva York, 4 de abril de 1965) es un actor, actor de voz, productor y cantante estadounidense. Inició su carrera como actor a temprana edad apareciendo en varios filmes dirigidos por su padre, Robert Downey Sr., y en su infancia estudió actuación en varias academias de Nueva York. Se mudó con su padre a California, pero abandonó sus estudios para enfocarse completamente en su carrera.</p>
+                  </div>
+                </div>
+                <p class="card-text"><small class="text-muted">Last updated 1 hours ago</small></p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingseven">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseseven" aria-expanded="false" aria-controls="collapseseven">
+                Scarlett Johansson
+              </button>
+            </h2>
+            <div id="collapseseven" class="accordion-collapse collapse" aria-labelledby="headingseven">
+              <div class="accordion-body">
+                  <img src="./img/scarlett_johansson.jpg" alt="scarlett_johansson"> 
+                  <div class="body">
+                  <h5><strong>Actor:</strong>Scarlett Johansson</h5>
+                  <p>
+                    Scarlett Ingrid Johansson (Nueva York; 22 de noviembre de 1984) es una actriz, cantante y modelo estadounidense. Comenzó a mostrar intereses por la música y la actuación desde temprana edad, y a lo largo de su infancia y adolescencia se formó en distintos institutos como actriz. Tras tener varios papeles secundarios en distintas producciones, obtuvo su primer protagónico a los once años con la película Manny & Lo (1996), a la que luego le siguieron The Horse Whisperer (1998) y Ghost World (2001), actuaciones que le valieron elogios de la crítica..</p>
+                  </div>
+                </div>
+                <p class="card-text"><small class="text-muted">Last updated 1 hours ago</small></p>
+            </div>
+          </div>
+              </button>
+            </h2>
+            <div id="collapsesix" class="accordion-collapse collapse" aria-labelledby="headingsix">
+              <div class="accordion-body">
+                  <img src="./img/robert_downey_jr.jfif" alt="robert_downey_jr"> 
+                  <div class="body">
+                  <h5><strong>Actor:</strong>Robert downey Jr.</h5>
+                  <p>
+                    Robert John Downey Jr. (Nueva York, 4 de abril de 1965) es un actor, actor de voz, productor y cantante estadounidense. Inició su carrera como actor a temprana edad apareciendo en varios filmes dirigidos por su padre, Robert Downey Sr., y en su infancia estudió actuación en varias academias de Nueva York. Se mudó con su padre a California, pero abandonó sus estudios para enfocarse completamente en su carrera.</p>
+                  </div>
+                </div>
+                <p class="card-text"><small class="text-muted">Last updated 1 hours ago</small></p>
+            </div>
+          </div>
   
         </div>
       </section>
