ajustes de nombres de clases V5

--- a/contacto.html
+++ b/contacto.html
@@ -40,9 +40,9 @@
   </main>
 
 
-  <section class="seccion__contacto">
+  <section class="seccion-contacto">
     <!-- Formulario -->
-        <form class="formulario_contacto">
+        <form class="formulario-contacto">
         <!-- Encuadre del formulario -->
         <fieldset>
             <!-- Titulo del encuadre -->
