--- a/actores.html
+++ b/actores.html
@@ -11,26 +11,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body>
-    
-    <header class="encabezado"> 
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item" ><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item" ><a class="nav-link"  href="seriesypeliculas.html">Series y Peliculas</a></li>
-                <li class="nav-item" ><a class="nav-link" href="resenas.html">Reseñas</a></li>
-                <li class="nav-item" ><a class="nav-link" href="actores.html">Actores</a></li>
-                <li class="nav-item" ><a class="nav-link" href="contacto.html">Contacto</a></li>
-              </ul>
-            </div>
-            <a class="navbar-brand">Classic/Club</a>
-          </div>
-        </nav>
-        </header>
+  <header class="encabezado">  
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item" ><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item" ><a class="nav-link"  href="seriesypeliculas.html">Series y Peliculas</a></li>
+            <li class="nav-item" ><a class="nav-link" href="resenas.html">Reseñas</a></li>
+            <li class="nav-item" ><a class="nav-link" href="actores.html">Actores</a></li>
+            <li class="nav-item" ><a class="nav-link" href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+        <a class="navbar-brand" href="index.html" >Classic/Club</a>
+      </div>
+    </nav>
+    </header>
 
 
 
