--- a/resenas.html
+++ b/resenas.html
@@ -19,14 +19,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item" ><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item" ><a class="nav-link" href="login.html">Login</a></li>
               <li class="nav-item" ><a class="nav-link"  href="seriesypeliculas.html">Series y Peliculas</a></li>
               <li class="nav-item" ><a class="nav-link" href="resenas.html">Reseñas</a></li>
               <li class="nav-item" ><a class="nav-link" href="actores.html">Actores</a></li>
               <li class="nav-item" ><a class="nav-link" href="contacto.html">Contacto</a></li>
             </ul>
           </div>
-          <a class="navbar-brand">Classic/Club</a>
+          <a class="navbar-brand" href="index.html" >Classic/Club</a>
         </div>
       </nav>
       </header>
