--- a/actores.html
+++ b/actores.html
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item" ><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item" ><a class="nav-link" href="nuevoUser.html">Registrate</a></li>
             <li class="nav-item" ><a class="nav-link"  href="seriesypeliculas.html">Series y Peliculas</a></li>
             <li class="nav-item" ><a class="nav-link" href="resenas.html">Reseñas</a></li>
             <li class="nav-item" ><a class="nav-link" href="actores.html">Actores</a></li>
