--- a/nuevoUser.html
+++ b/nuevoUser.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport"  content="width= , initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classic/Club - Contacto</title>
     <link rel="stylesheet" href="./css/styles.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -35,7 +35,7 @@
       <!-- Titulo -->
       <div class="titulo">
       <h1>Classic/Club</h1>
-      <h2>Contacto</h2>
+      <h2>Nuevo Usuario</h2>
       </div>
   </main>
 
@@ -46,13 +46,8 @@
         <!-- Encuadre del formulario -->
         <fieldset>
             <!-- Titulo del encuadre -->
-            <legend>¡Dejanos tu mensaje!</legend>
+            <legend>¡Registrate!</legend>
           <!-- Datos personales -->
-            <!-- Mail del Usuario -->
-            <div class="form-group">
-              <label for="exampleInputEmail1">E-mail</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese un e-mail de contacto">
-            </div>
             <!-- Nombre  del Usuario y Apellido del Usuario -->
             <label for="data">Datos Personales</label>
             <div class="input-group">
@@ -62,6 +57,11 @@
                 <div class="col">
                   <input type="text" class="form-control" placeholder="Apellido">
                 </div>
+            </div>
+            <!-- Mail del Usuario -->
+            <div class="form-group">
+              <label for="exampleInputEmail1">E-mail</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese un e-mail de contacto">
             </div>
             <!-- Genero -->
             <label for="data">Genero</label>
@@ -73,12 +73,7 @@
                 <option>Otros</option>
               </select>
             </div>
-          <!-- Sugerencias -->
-          <label for="data">Sugerencias</label>
-          <div class="input-group">
-            <textarea class="form-control" placeholder="Escribi tus comentarios"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-primary">Registrate</button>
           <button type="reset" class="btn btn-primary">Limpiar</button>
           
         </fieldset>
@@ -97,6 +92,8 @@
         <p class="text-center text-muted">© 2021 Company, Inc</p>
     </div> 
   </footer>
+<script  type="module" src="./js/index.js"></script>
+
 
 </body>
 </html>
